# MagicDungeon

./: README.md  magicblock-labs-ephemeral-rollups-sdk-0.6.5.tgz  package-lock.json  package.json  replay_commits.py  server.js  vite.config.js
dd/: Anchor.toml  package.json
dd/app/: package.json  tsconfig.json
dd/app/src/: App.tsx
dd/app/src/components/: Demo.tsx  TestDashboard.tsx
dd/app/src/hooks/: use-amongus-program.ts
dd/programs/among_us/: Cargo.toml
dd/programs/among_us/src/: lib.rs
dd/tests/: among_us.ts
src/: App.jsx  index.css
src/components/: ChainLog.jsx  Character.jsx  CharacterController.jsx  Experience.jsx  HUD.jsx  Map.jsx  RemoteCharacter.jsx  SocketManager.jsx  TaskStation.jsx
src/context/: GameContext.jsx
src/hooks/: useAmongUsProgram.js
src/idl/: among_us.json  among_us.ts
src/providers/: WalletProvider.jsx
src/screens/: CharacterSelect.jsx  Countdown.jsx  CreateRoom.jsx  DelegatingScreen.jsx  GameMode.jsx  JoinRoom.jsx  LobbyScreen.jsx  MainMenu.jsx  MapTestScreen.jsx  MeetingScreen.jsx  ResultsScreen.jsx  RoleReveal.jsx  SplashScreen.jsx
