[package]
name = "among_us"
version = "0.1.0"
description = "Among Us on-chain game with private ephemeral rollups (TEE)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "among_us"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.6.5", features = ["anchor", "access-control"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
